# Flock

./: .gitignore  CMakeLists.txt  README.md  main.cpp  project.md
Client/: CMakeLists.txt  main.cpp
Client/network/: TCPClient.cpp  TCPClient.hpp
Client/ui/: ChatRoomScreen.cpp  ChatRoomScreen.hpp  HomeScreen.cpp  HomeScreen.hpp  LoadingScreen.cpp  LoginScreen.cpp  LoginScreen.hpp  MenuScreen.cpp  MenuScreen.hpp  RegisterScreen.cpp  RegisterScreen.hpp  Terminal.cpp  Terminal.hpp
Flock_client/: main.cpp
Flock_client/ui/: LoadingScreen.hpp  MenuScreen.cpp  MenuScreen.hpp  Screen.hpp  Terminal.hpp
Server/: CMakeLists.txt  main.cpp
Server/Database/: Database.cpp  Database.hpp  Room.hpp  User.hpp  users.txt
Server/Database/chats_1-1/: jisan_kim.txt  jisan_shahamat.txt  kim_shahamat.txt  prodhan_shahamat.txt
Server/Network/: Protocol.hpp  TCPServer.cpp  TCPServer.hpp
ui/: LoadingScreen.cpp  LoadingScreen.hpp  MenuScreen.cpp  Screen.hpp  Termical.hpp  Terminal.cpp  Terminal.hpp  color.cpp  color.hpp
